src/test/ui/regions/regions-return-ref-to-upvar-issue-17403.nll.stderr
error: captured variable cannot escape `FnMut` closure body
  --> $DIR/regions-return-ref-to-upvar-issue-17403.rs:7:24
   |
LL |         let mut f = || &mut x;
   |                      - ^^^^^^ returns a reference to a captured variable which escapes the closure body
   |                      |
   |                      inferred to be a `FnMut` closure
   |
   = note: `FnMut` closures only have access to their captured variables while they are executing...
   = note: ...therefore, they cannot allow references to captured variables to escape

error: aborting due to previous error

